--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,13 +1,15 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background-image: url('https://i.imgur.com/vSHeieC.jpg');
+    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     flex-direction: column;
+    color: #fff;
 }
 
 .chat-container {
@@ -18,7 +20,7 @@ body {
     max-height: 600px;
     margin: 20px;
     border: 1px solid #ccc;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.8);
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
@@ -29,8 +31,8 @@ body {
     border-right: 1px solid #ccc;
     padding: 20px;
     box-sizing: border-box;
-    background-color: #3498db;
-    color: #fff;
+    background-color: #ff00ff;
+    color: #000;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
     display: flex;
@@ -62,8 +64,8 @@ body {
 }
 
 .user-item.active {
-    background-color: #cdebff;
-    color: #4f4f4f;
+    background-color: #ffcc00;
+    color: #000;
     padding: 10px;
     border-radius: 5px;
 }
@@ -114,7 +116,7 @@ body {
 
 .user-item span.nbr-msg {
     margin-left: 10px;
-    background-color: #f8fa6f;
+    background-color: #ff0000;
     color: white;
     padding: 5px;
     width: 10px;
@@ -123,14 +125,14 @@ body {
 }
 
 .sender {
-    background-color: #3498db;
+    background-color: #00ff00;
     color: #fff;
     align-self: flex-end;
 }
 
 .receiver {
-    background-color: #ecf0f1;
-    color: #333;
+    background-color: #0000ff;
+    color: #fff;
     align-self: flex-start;
 }
 
@@ -150,7 +152,7 @@ body {
 .message-input button {
     padding: 10px;
     border: none;
-    background-color: #3498db;
+    background-color: #ff00ff;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
@@ -187,7 +189,7 @@ body {
 .user-form button {
     padding: 12px;
     border: none;
-    background-color: #3498db;
+    background-color: #ff00ff;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
